# bursar

./: .gitignore  AUDIT_REPORT.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  lefthook.yml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  concurrency-stress.yml  docs.yml
docs/: docusaurus.config.ts  package.json  pricing-config.schema.json  sidebars.ts
docs/audit/: 01-missing-implementations.md  02-supabase-store-key-casing-bug.md  03-error-prone-code.md  04-red-flags.md  05-optimization-refactor.md  06-hacks-workarounds.md  07-parity-violations.md  README.md
docs/backlog/: anniversary-reset-payment-provider-alignment.md
docs/bursar-web/: 01-api-keys-authn-authz.md  02-service-2-data-plane.md  03-service-1-control-plane.md  04-sdk-integration.md  05-control-plane-db.md  06-cross-cutting.md  README.md
docs/docs/: architecture.mdx  cli.mdx  configuration.mdx  expressions.mdx  financial-safety.mdx  intro.mdx  storage-backends.mdx  subscription-integration.mdx
docs/revamp/: README.md  implementation-plan.md  schema-revamp.md  schema-v2.md
docs/scripts/: conf.py  gen-api-docs.sh  gen-notebook-docs.py  gen-notebook-docs.sh
javascript/: CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  vitest.config.ts  vitest.providers.config.ts
javascript/scripts/: export-contract-results.mjs
javascript/src/: allowance.ts  browser.ts  bursar.ts  case-utils.ts  config.ts  credits-service.ts  engine.ts  errors.ts  expr.ts  index.ts  load-pricing-file.ts  manager.ts  metrics.ts  node.ts  types.ts
javascript/tests/: allowance.test.ts  auto-recharge-config.test.ts  billing-integration.test.ts  bursar.test.ts  config-parity.test.ts  config.test.ts  credit-manager.test.ts  dodo-event-mapper.test.ts  dodo-webhook-signature.test.ts  engine.test.ts  events.test.ts  expr.test.ts  global-setup.ts  invariants.property.test.ts  lazy-expiry.test.ts  lease-adversarial.test.ts  lease.test.ts  load-pricing-file.test.ts  memory-store.test.ts  postgres-store.test.ts  pricing-cache.test.ts  provider-adapters.test.ts  provider-logger.test.ts  security-rls.test.ts  store-integration.test.ts  (+5 more)
python/: CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
python/notebooks/: 01_pricing_basics.ipynb  02_credit_lifecycle.ipynb  03_plans_and_allowances.ipynb  04_analytics.ipynb  05_spend_caps.ipynb  06_teams.ipynb  07_events.ipynb  08_custom_store.ipynb  09_expression_evaluator.ipynb
python/scripts/: export_contract_results.py  generate_notebooks.py  generate_pricing_json_schema.py
python/src/bursar/: __init__.py  __main__.py  allowance.py  breakdown.py  bursar.py  config.py  credits_service.py  engine.py  events.py  expr.py  manager.py  metrics.py
python/src/bursar/billing/: __init__.py  auto_recharge.py  billing_service.py  manager.py  memory.py  models.py  postgres.py  store.py  supabase.py
python/src/bursar/interface/: __init__.py  base.py  memory.py  models.py  postgres.py  supabase.py
python/src/bursar/providers/: __init__.py  _shared.py  types.py
python/src/bursar/providers/dodo/: __init__.py  event_mapper.py  provider.py
python/src/bursar/providers/mock/: provider.py
python/src/bursar/providers/stripe/: __init__.py  event_mapper.py  provider.py
python/src/bursar/repositories/: _types.py  _utils.py  analytics.py  balance.py  bucket.py  deduction.py  lease.py  plan.py  pricing.py  schemas.py  team.py
python/src/bursar/repositories/billing/: config.py  customer.py  dispute.py  event.py  invoice.py  offer.py  payment.py  preferences.py  refund.py  subscription.py  topup.py
python/src/bursar/sql/: 001_core_schema.sql  001_schema_and_types.sql  002_credit_rpcs.sql  003_bursar_config.sql  003_pricing_config.sql  004_plans.sql  005_spend_caps.sql  006_refunds_and_expiry.sql  007_analytics.sql  008_teams.sql  009_deduct_and_leases.sql  010_credit_tiers.sql  010_tables.sql  011_lazy_expiry.sql  012_feature_limits.sql  013_billing.sql  014_cycle_grant.sql  015_billing_records.sql  016_plan_versioning.sql  017_billing_lifecycle.sql  018_multi_provider_subs.sql  018_signup_trigger_better_auth.sql  019_signup_trigger_better_auth.sql  020_billing_preferences.sql  020_constraints.sql  021_bursar_user_fks.sql  022_sql_hardening.sql  023_catalog_lifecycle.sql  024_offer_lifecycle.sql  025_performance_indexes.sql  026_config_driven_grants.sql  030_indexes.sql  040_foreign_keys.sql  050_policies.sql  060_rls.sql  070_credit_functions.sql  080_billing_functions.sql  090_lease_catalog_functions.sql  100_plan_billing_functions.sql  110_triggers.sql  (+6 more)
python/src/ducto/: __init__.py  __main__.py  allowance.py  breakdown.py  config.py  engine.py  events.py  manager.py  metrics.py
python/src/ducto/interface/: base.py  memory.py  models.py  postgres.py  supabase.py
python/src/ducto/sql/: 001_core_schema.sql  002_credit_rpcs.sql  003_pricing_config.sql  004_plans.sql  004_user_plans.sql  005_credit_refunds.sql  005_spend_caps.sql  006_refunds_and_expiry.sql  007_analytics.sql  008_teams.sql  009_deduct_and_leases.sql  010_credit_tiers.sql  011_lazy_expiry.sql  012_feature_limits.sql  016_lease_lifecycle.sql  020_drop_old_deduct_with_allowance.sql  022_configurable_allowance_window.sql  023_credit_tiers.sql
python/tests/: conftest.py  dodo_fixtures.py  test_allowance.py  test_auto_recharge_config.py  test_billing_integration.py  test_billing_manager.py  test_bursar.py  test_cli.py  test_config.py  test_config_parity.py  test_configuration_examples.py  test_dodo_event_mapper.py  test_engine.py  test_events.py  test_expr.py  test_invariants_property.py  test_lazy_expiry.py  test_lease.py  test_lease_adversarial.py  test_manager.py  test_pricing_cache.py  test_provider_adapters.py  test_security_rls.py  test_sql_hardening.py  test_store.py  test_store_integration.py  test_stripe_event_mapper.py  test_subscription_cycle.py  test_tiers.py  test_tiers_adversarial.py
scripts/: pricing-defaults.json  seed_pricing.py
tests/: test_config.py  test_engine.py  test_manager.py
(+129 files in other folders)
