[project]
name = "bursar"
version = "0.0.1"
description = "Declarative credit calculation engine for AI SaaS platforms"
readme = "README.md"
# Bounded to the advertised 3.11–3.13 range (M13). decimal-based money math is
# stdlib, so no new runtime dependency is needed.
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
]
keywords = ["credits", "billing", "llm", "usage-metering", "pricing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://zonastery.github.io/bursar/"
Source = "https://github.com/Zonastery/bursar"
Documentation = "https://zonastery.github.io/bursar/"
Issues = "https://github.com/Zonastery/bursar/issues"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project.scripts]
bursar = "bursar.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
# Supabase store talks to the REST API over httpx only — it does NOT need a
# direct Postgres driver (M13). psycopg2 belongs to the `postgres` extra.
supabase = [
    "httpx>=0.28.1",
]
postgres = [
    "psycopg2-binary>=2.9.12",
]
# Single source of truth for dev/test dependencies (M13). The duplicate
# `[dependency-groups].dev` block was removed to end the version skew.
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "pytest-repeat>=0.9",
    "ruff>=0.15.0",
    "pyright>=1.1.390",
    "testcontainers[postgres]>=4.8",
    "hypothesis>=6.112",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pyyaml>=6.0.3",
]

[tool.setuptools.package-data]
bursar = ["sql/*.sql"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "ASYNC", "RUF100", "SIM", "RET", "C901"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["UP006"]
"**/test_*.py" = ["SIM", "RET", "N"]
"scripts/*" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
# Pin the analysis target so pyright does not false-flag `X | Y` union syntax
# (Phase-1 agents hit this without it). Matches the floor of requires-python.
pythonVersion = "3.11"
typeCheckingMode = "standard"
useLibraryCodeForTypes = false
venvPath = "."
venv = ".venv"
exclude = ["**/__pycache__", "**/.venv/**", "**/.pytest_cache/**"]
reportMissingImports = "none"
reportMissingModuleSource = "none"
reportOptionalMemberAccess = "none"

[tool.pytest.ini_options]
markers = [
    "integration: requires a real Postgres (real DSN or a testcontainers-managed one)",
    "concurrency: exercises thread/connection races; slower, may be timeout-sensitive",
    "security: RLS / privilege-lockdown checks against real Postgres roles",
    "property: Hypothesis-driven property/invariant tests",
    "slow: long-running (property, high-repeat concurrency, migrations)",
]
addopts = "--timeout=120"

[tool.coverage.run]
source = ["bursar"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "def __repr__", "raise NotImplementedError"]
# Measured baseline (no DB, unit tests only) was 79.27% at the time this gate
# was introduced; the CI job additionally runs with a real Postgres so its
# effective coverage is higher. Ratchet this up as coverage improves — never
# lower it without a documented reason.
fail_under = 79

# Dev group: the editable workflow installs the `test` extra plus the
# notebook/docs tooling below. Test/runtime deps (httpx, psycopg2, testmon) are
# declared ONCE in the `test` extra to avoid the prior version skew (M13).
[dependency-groups]
dev = [
    {include-group = "test-deps"},
    "ipykernel>=7.3.0",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "pglite>=1.0.14",
]
# Mirror of the `test` optional-dependency extra for `uv`'s dependency-group
# resolver (extras and groups are separate namespaces in uv).
test-deps = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "pytest-repeat>=0.9",
    "ruff>=0.15.0",
    "pyright>=1.1.390",
    "testcontainers[postgres]>=4.8",
    "hypothesis>=6.112",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pyyaml>=6.0.3",
]
